
Release 5.0.4 (unreleased)
==========================

Bug fixes
---------

- Fix issue in some matrix structure selection forced cases.

- Several fixes in CFD_STUDY's interactive behavior.

- Fix missing file in theory graphics Makefile.

Release 5.0.3 (June 29 2017)
============================

Bug fixes
---------

- Fix call to eigen values computation in coupled Rij-SSG solver.

- Fix for triangulation of warped faces issue (preceding version 4.0).

Release 5.0.2 (June 23 2017)
============================

Bug fixes
---------

- Complete reinit_turb for Bl-v2-k model.

- Fix robustness issue of eigen values comput. for sym. tensors for close to
  diagonal tensors.

- Fix bug in the GUI example of the initialisation of alpha in the Bl-v2/k
  turbulence model.

- Fix user example for wall 1d thermal model.

- Fix for time averages in GUI if a start time is given.

Release 5.0.1 (June 14 2017)
============================

Bug fixes
---------

- GUI: fix imposed pressure outlet.

- Major fixes for coupled Rij solver (irijico = 1).

- Major fix in parallel when activating head losses and improved
  hydrostatic pressure algorithm.

- GUI: fix opening of advanced turbulence model options for new cases.

- Lagrangian module: fix numbering issue leading to incorrect postprocessing
  output of boundary statistics.

- Fix space-filling curve based partitioning in some rare cases
  impacting mostly 1D or 2D meshes.

- Fix for idilat>3 algo. and isstpp>1 (beta or NVD/TVD limiters) compatibility.

- Fix compilation of BLAS checks.

Release 5.0.0 (June 2 2017)
===========================

Bug fixes
---------

- Fixes for handling of Catalyst when PV_PLUGIN_PATH may be defined.

- Fix issues for transient mesh visualization.

- Fix error message handling for plugin load failures.

- GUI: fix some validator issues in steady management page.

- Fix various issues with Lagrangian coal combustion.

Release 5.0.0-rc1 (May 26 2017)
===============================

User changes